lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.error
Lander:10: error: type mismatch;
 found   : Array[Double]
 required: Array[Int]
  	return segment
               ^Lander:14: error: not found: value segment
  	var debut=segment(0)
                  ^Lander:15: error: not found: value segment
  	var fin = segment(1)
                  ^